syntax = "proto2";

package images;

import "google/protobuf/duration.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/images/config";

////////////////////////////////////////////////////////////////////////////////

message DiskPoolConfig {
    optional string ZoneId = 1;
    optional uint32 Capacity = 2;
}

message ImagesConfig {
    optional string DeletedImageExpirationTimeout = 1 [default = "30m"];
    optional string ClearDeletedImagesTaskScheduleInterval = 2 [default = "1m"];
    optional uint32 ClearDeletedImagesLimit = 3 [default = 1000];
    optional string StorageFolder = 4 [default = "images"];
    repeated DiskPoolConfig DefaultDiskPoolConfigs = 5;
    repeated string UseS3ForFolder = 6;
    optional uint32 UseS3Percentage = 7;
    optional bool ConfigurePoolsByDefault = 8;
    // Temporary solution for backwards compatibility. See
    // https://github.com/ydb-platform/nbs/issues/1950#issuecomment-2757498035
    // TODO: remove it later.
    optional bool RetryBrokenDRBasedDiskCheckpoint = 9;
}
