syntax = "proto3";

package images;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/images/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateImageFromDiskRequest {
    reserved 4, 5, 7;

    types.Disk SrcDisk = 1;
    string DstImageId = 2;
    string FolderId = 3;
    repeated types.DiskPool DiskPools = 6;
    bool UseS3 = 8;
    bool RetryBrokenDRBasedDiskCheckpoint = 9;
}

message CreateImageFromDiskTaskState {
    int64 Offset = 2;
    double Progress = 3;
    int64 ImageSize = 4;
    int64 ImageStorageSize = 5;
    string DataplaneTaskID = 6;
}
